alignment issues about/page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1211,6 +1211,7 @@ nav {
 	width: 100%;
 	height: 70vw;
 	color: #000;
+	margin-bottom: 5%;
 }
 
 #about h1 {
@@ -1251,12 +1252,14 @@ nav {
 #approach h1 {
 	font-size: 4vw;
 	font-family: "Spectral", serif;
+	align-content: center;
 }
 
 #approach p {
 	font-size: 2.2vw;
 	font-weight: lighter;
 	font-family: "Raleway", sans-serif;
+	align-content: center;
 }
 
 /*pop-up boxes*/
@@ -1434,7 +1437,7 @@ nav {
 	background-color: #fff;
 	width: 100%;
 	height: 70vw;
-	/*margin-top: -5%;*/
+	margin-top: -5%;
 }
 
 #details h1 {
@@ -1459,7 +1462,7 @@ nav {
 	font-family: "Raleway", sans-serif;
 	text-align: left;
 	float: left;
-	padding: 0 6% 0 6%;
+	padding: 0 4% 0 8%;
 }
 
 /*contact page*/
